# bcs-oi-api-sdk

./: .env.example  .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  README.rst  bcs_oi_api.py  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish-test.yml  publish.yml  workflow.yml
bcs_oi_api/: __init__.py  bcs_oi_api.py
bcs_oi_api/models/: __init__.py
bcsapis/: __init__.py  bcsapis.py  models.py
models/: __init__.py  models.py
models/bulk/: models.py
models/collectors/: __init__.py  models.py
models/config_best_practice/: __init__.py  models.py
models/contracts/: models.py
models/device_groups/: models.py
models/device_reset/: __init__.py  models.py
models/inventory/: models.py
models/product_alerts/: __init__.py  models.py
models/risk_mitigation/: models.py
models/software_track/: __init__.py  models.py
models/syslog/: models.py
src/: check.py
src/bcs_oi_api/: __init__.py  bcs_oi_api.py
tests/: test_lib.py  utils.py
tests/collectors/: test_collectors.py
tests/config_best_practice/: test_config_best_practice.py
tests/contracts/: test_contracts.py
tests/device_groups/: test_device_groups.py
tests/device_reset/: test_device_reset.py
tests/inventory/: test_inventory.py
tests/place_in_network/: test_place_in_network_details.py
tests/policy_variation_analysis/: test_policy_variation_analysis.py
tests/product_alerts/: test_product_alerts.py
tests/risk_mitigation/: test_risk_mitigation.py
tests/scalability_insights/: test_scalability_insights.py
tests/syslog/: test_syslog.py
(+40 files in other folders)
