[metadata]
name = bcs-oi-api
version = 1.1.0
author = Kristof Van Coillie
author_email = kvancoil@cisco.com
description = Business Critical Services Operational Insights API SDK
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CiscoDevNet/bcs-oi-api-sdk
project_urls =
    Bug Tracker = https://github.com/CiscoDevNet/bcs-oi-api-sdk/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Telecommunications Industry
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    Topic :: System :: Networking :: Monitoring
    Topic :: System :: Monitoring

[options]
python_requires = >=3.7
install_requires =
    jsonlines
    requests
    pyjwt
    pydantic
package_dir =
    = src
packages = find:

[options.packages.find]
where = src

[flake8]
max-line-length = 120
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,
    # Unused import (happens when using typing.TYPE_CHECKING).
    F401,
